# py-mpspline

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pypi-release.yml
docs/: Makefile  algorithm.rst  api.rst  conf.py  index.rst  installation.rst  parameters.rst  performance.rst  quickstart.rst  requirements.txt  troubleshooting.rst
examples/: basic_usage.py  batch_processing.py  custom_depths.py  parameter_tuning.py
src/mpspline/: __init__.py  __version__.py  algorithm.py  constants.py  spline.py  utils.py  validation.py
tests/: __init__.py  conftest.py  test_harmonize.py  test_horizon_sequence.py  test_parallel.py  test_validation.py
